--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": ">= 6",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^2.1.1",
     "coffee-script": "*",
+    "eslint": "^2.11.1",
+    "eslint-config-leankit": "^2.0.0",
+    "eslint-plugin-babel": "^3.2.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "~0.6.1",
@@ -40,6 +44,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
+    "lint": "eslint --ignore-path .gitignore ./src",
     "build": "babel -d lib/ src/ --ignore=\"*spec.js\"",
     "test": "grunt test",
     "prepublish": "npm run build"
