--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "aupair": "^0.1.2",
+    "babel-runtime": "^6.9.2",
     "moment-precise-range": "^0.1.1",
     "request-promise": "^3.0.0"
   },
@@ -24,29 +25,31 @@
     "babel-cli": "^6.9.0",
     "babel-core": ">= 6",
     "babel-eslint": "^6.0.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
-    "chai": "^2.1.1",
+    "babel-preset-stage-3": "^6.5.0",
+    "chai": "^3.5.0",
     "coffee-script": "*",
     "eslint": "^2.11.1",
     "eslint-config-leankit": "^2.0.0",
     "eslint-plugin-babel": "^3.2.0",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-mocha-test": "~0.12.7",
-    "grunt-release": "~0.11.0",
     "hubot": "2.x",
-    "matchdep": "~0.3.0",
     "mocha": "^2.1.0",
+    "nyc": "^6.4.4",
     "sinon": "^1.13.0",
+    "sinon-as-promised": "^4.0.0",
     "sinon-chai": "^2.7.0"
   },
   "main": "lib/index.js",
   "scripts": {
+    "clean": "rm -rf lib",
     "lint": "eslint --ignore-path .gitignore ./src",
-    "build": "babel -d lib/ src/ --ignore=\"*spec.js\"",
-    "test": "grunt test",
+    "build": "npm run clean && babel -d lib/ src/ --ignore=\"*spec.js\" --source-maps",
+    "test": "npm run lint && npm run coverage",
+    "test-and-exit": "NODE_ENV=test mocha --compilers js:babel-register -r ./spec-helpers -R spec 'src/**/*.spec.js'",
+    "test-watch": "NODE_ENV=test mocha -w --compilers js:babel-register -r ./spec-helpers -R spec 'src/**/*.spec.js'",
+    "coverage": "nyc -r text-summary -r html --require=babel-register -- npm run test-and-exit",
+    "show-coverage": "open ./coverage/index.html",
     "prepublish": "npm run build"
   }
 }
