--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hubot-aupair",
   "description": "A hubot script that checks and reports the health of any dependent services",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "JD Courtoy <jd.courtoy@gmail.com>",
   "license": "MIT",
   "keywords": "hubot, hubot-scripts, hubot-health, health, check, status, aupair, au-pair",
@@ -25,6 +25,7 @@
     "babel-cli": "^6.9.0",
     "babel-core": ">= 6",
     "babel-eslint": "^6.0.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-3": "^6.5.0",
